[gd_scene load_steps=4 format=3 uid="uid://bvn8x7q2m5kya"]

[ext_resource type="Script" uid="uid://byylnqabls6oi" path="res://scripts/stations/ViewScreen.gd" id="1_5x8vq"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.02, 0.02, 0.08, 1)
ambient_light_source = 2
ambient_light_color = Color(0.1, 0.15, 0.3, 1)
ambient_light_energy = 0.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.15, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.6, 1, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ViewScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5x8vq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SubViewport" type="SubViewport" parent="."]
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 200, 300)
environment = SubResource("Environment_1")
near = 0.1
far = 100000.0

[node name="UniverseContainer" type="Node3D" parent="SubViewport"]

[node name="ShipsContainer" type="Node3D" parent="SubViewport/UniverseContainer"]

[node name="ProjectilesContainer" type="Node3D" parent="SubViewport/UniverseContainer"]

[node name="EffectsContainer" type="Node3D" parent="SubViewport/UniverseContainer"]

[node name="EnvironmentContainer" type="Node3D" parent="SubViewport/UniverseContainer"]

[node name="PlanetsContainer" type="Node3D" parent="SubViewport/UniverseContainer"]

[node name="StationsContainer" type="Node3D" parent="SubViewport/UniverseContainer"]

[node name="ParticleEffects" type="Node3D" parent="SubViewport"]

[node name="EngineTrails" type="Node3D" parent="SubViewport/ParticleEffects"]

[node name="WeaponEffects" type="Node3D" parent="SubViewport/ParticleEffects"]

[node name="ExplosionEffects" type="Node3D" parent="SubViewport/ParticleEffects"]

[node name="AmbientEffects" type="Node3D" parent="SubViewport/ParticleEffects"]

[node name="StarField" type="Node3D" parent="SubViewport"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 1000, 0)
light_color = Color(1, 0.95, 0.8, 1)
light_energy = 0.8
shadow_enabled = true

[node name="HUDOverlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopHUD" type="HBoxContainer" parent="HUDOverlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="LeftInfo" type="VBoxContainer" parent="HUDOverlay/TopHUD"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShipStatus" type="Panel" parent="HUDOverlay/TopHUD/LeftInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="StatusGrid" type="GridContainer" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="HealthLabel" type="Label" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus/StatusGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Hull:"

[node name="HealthValue" type="Label" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus/StatusGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "100%"

[node name="ShieldLabel" type="Label" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus/StatusGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Shields:"

[node name="ShieldValue" type="Label" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus/StatusGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 12
text = "100%"

[node name="PowerLabel" type="Label" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus/StatusGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Power:"

[node name="PowerValue" type="Label" parent="HUDOverlay/TopHUD/LeftInfo/ShipStatus/StatusGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "100%"

[node name="CenterInfo" type="VBoxContainer" parent="HUDOverlay/TopHUD"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ShipName" type="Label" parent="HUDOverlay/TopHUD/CenterInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 18
text = "USS ASTRA"
horizontal_alignment = 1

[node name="AlertLevel" type="Label" parent="HUDOverlay/TopHUD/CenterInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "CONDITION GREEN"
horizontal_alignment = 1

[node name="RightInfo" type="VBoxContainer" parent="HUDOverlay/TopHUD"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NavigationPanel" type="Panel" parent="HUDOverlay/TopHUD/RightInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="NavGrid" type="GridContainer" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="VelocityLabel" type="Label" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel/NavGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Velocity:"

[node name="VelocityValue" type="Label" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel/NavGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "0.0 m/s"

[node name="HeadingLabel" type="Label" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel/NavGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Heading:"

[node name="HeadingValue" type="Label" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel/NavGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "0Â°"

[node name="TimeLabel" type="Label" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel/NavGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Time Factor:"

[node name="TimeValue" type="Label" parent="HUDOverlay/TopHUD/RightInfo/NavigationPanel/NavGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "1.0x"

[node name="BottomHUD" type="HBoxContainer" parent="HUDOverlay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ContactsList" type="Panel" parent="HUDOverlay/BottomHUD"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ContactsLabel" type="Label" parent="HUDOverlay/BottomHUD/ContactsList"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "CONTACTS"
horizontal_alignment = 1

[node name="ContactsScroll" type="ScrollContainer" parent="HUDOverlay/BottomHUD/ContactsList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 24.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContactsVBox" type="VBoxContainer" parent="HUDOverlay/BottomHUD/ContactsList/ContactsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ThreatLevel" type="Panel" parent="HUDOverlay/BottomHUD"]
custom_minimum_size = Vector2(160, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ThreatLabel" type="Label" parent="HUDOverlay/BottomHUD/ThreatLevel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "THREAT LEVEL"
horizontal_alignment = 1

[node name="ThreatBar" type="ProgressBar" parent="HUDOverlay/BottomHUD/ThreatLevel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -15.0
offset_right = 60.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
value = 25.0
show_percentage = false

[node name="ThreatValue" type="Label" parent="HUDOverlay/BottomHUD/ThreatLevel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -25.0
offset_right = 30.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "LOW"
horizontal_alignment = 1

[node name="ConnectionStatus" type="Label" parent="HUDOverlay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "DISCONNECTED"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="HUDOverlay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 110.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "â Main Menu"

[node name="CameraControls" type="VBoxContainer" parent="HUDOverlay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -60.0
offset_right = 110.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CameraLabel" type="Label" parent="HUDOverlay/CameraControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 12
text = "CAMERA"
horizontal_alignment = 1

[node name="CameraModeButton" type="Button" parent="HUDOverlay/CameraControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Follow Ship"

[node name="ViewModeButton" type="Button" parent="HUDOverlay/CameraControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "External"

[node name="ZoomSlider" type="VSlider" parent="HUDOverlay/CameraControls"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
min_value = 10.0
max_value = 1000.0
value = 300.0
